fix(card): reduce eagle width, align help icon, adjust icon brightness, fix update date, move dodatkowe dane text

--- a/assets/app/card.css
+++ b/assets/app/card.css
@@ -78,7 +78,11 @@ body .bottom_bar{
 }
 
 .under_image_blue{
-    filter: brightness(0) saturate(100%) invert(58%) sepia(98%) saturate(1234%) hue-rotate(180deg) brightness(105%) contrast(100%);
+    filter: brightness(0) saturate(100%) invert(58%) sepia(98%) saturate(1234%) hue-rotate(180deg) brightness(85%) contrast(100%);
+}
+
+.under_image_bright{
+    filter: brightness(1.3);
 }
 
 .under_text{
@@ -187,7 +191,7 @@ body .bottom_bar{
     position: absolute;
     top: 69.6%;
     left: 4%;
-    width: 8.2%;
+    width: 7%;
     overflow: hidden;
 }
 
@@ -300,7 +304,7 @@ body .bottom_bar{
     grid-template-columns: max-content max-content max-content;
     height: 100%;
     width: max-content;
-    margin-top: 5px;
+    margin-top: 0px;
     margin-bottom: auto;
     margin-left: 20px;
     margin-right: auto;
