--- a/assets/app/main.css
+++ b/assets/app/main.css
@@ -279,7 +279,7 @@ img{
     width: 20px;
     margin-right: 15px;
     margin-left: auto;
-    margin-top: 5px;
+    margin-top: auto;
     margin-bottom: auto;
     cursor: pointer;
     pointer-events: auto !important;
